--- a/hessian-my-demo/pom.xml
+++ b/hessian-my-demo/pom.xml
@@ -10,6 +10,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
     </properties>
 
     <dependencies>
@@ -26,10 +29,16 @@
         </dependency>
 
         <dependency>
-    <groupId>com.caucho</groupId>
-    <artifactId>hessian</artifactId>
-    <version>4.0.38</version>
-</dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+            <version>4.0.38</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.24</version>
+        </dependency>
 
     </dependencies>
 </project>
